--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -1,19 +1,11 @@
-name: Build
+name: Build Image
 
 on:
   push:
-    branches:
-      - main
-    tags:
-      - 'v*'
-
+    branches: [ main ]
+    tags: [ 'v*.*' ]
   pull_request:
-    branches:
-      - main
-
-env:
-  REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}
+    branches: [ main ]
 
 jobs:
   build:
@@ -24,32 +16,15 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Set up Docker Buildx
-        id: buildx
-        uses: docker/setup-buildx-action@v1
-
-      - name: Cache Docker layers
-        uses: actions/cache@v2
-        with:
-          path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-buildx-${{ github.sha }}
-          restore-keys: |
-            ${{ runner.os }}-buildx-
-
-      - name: Build image
-        id: build_docker_image
+      - name: Build and push image
+        id: build_and_push_docker_image
         uses: docker/build-push-action@v2
         with:
           context: ./
           file: ./Dockerfile
-          builder: ${{ steps.buildx.outputs.name }}
           push: true
-          tags: |
-            ghcr.io/abandontech/abandonauth:${{ github.sha }}
-            ${{ github.ref == 'refs/heads/main' && 'ghcr.io/abandontech/abandonauth:latest' || '' }}
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache
+          tags: registry.abandontech.cloud/abandontech/abandonauth:latest
 
       - name: Image digest
         run: |
-          echo ${{ steps.build_docker_image.outputs.digest }}
+          echo ${{ steps.build_and_push_docker_image.outputs.digest }}
