--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,14 +2,19 @@ version: "3"
 
 services:
 
-  keydb:
-    image: eqalpha/keydb
-    container_name: keydb
-    command: keydb-server /etc/keydb/redis.conf --server-threads 2
+  database:
+    image: "postgres:14"
     volumes:
-      - keydb-storage:/data
+      - postgres_data:/var/lib/postgresql/data/
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U postgres" ]
+      interval: 2s
+      timeout: 1s
+      retries: 5
     ports:
-      - "6379:6379"
+      - "5432:5432"
+    environment:
+      - "POSTGRES_HOST_AUTH_METHOD=trust"
 
 volumes:
-  keydb-storage:
+  postgres_data:
