--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,6 +6,7 @@ repos:
     -   id: end-of-file-fixer
     -   id: check-toml
     -   id: check-yaml
+        exclude: deployment/
     -   id: check-added-large-files
 -   repo: https://github.com/pycqa/isort
     rev: 5.10.1
