--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.10"
 fastapi = "^0.79.0"
 uvicorn = "^0.18.2"
 toml = "^0.10.2"
+classy-config = "^0.3.2"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^4.0.1"
