--- a/deployment/production-deployment.yml
+++ b/deployment/production-deployment.yml
@@ -17,12 +17,14 @@ spec:
         - name: abandonauth
           image: "registry.abandontech.cloud/abandontech/abandonauth:latest"
           imagePullPolicy: Always
-          args: [ "main:api", "--proxy-headers", "--host", "0.0.0.0", "--port", "80", "--root-path", "/auth" ]
+          args: ["sh", "-c", "/root/.poetry/bin/poetry run prisma db push && uvicorn abandonauth.app:app --proxy-headers --host 0.0.0.0 --port 80 --root-path /auth" ]
           ports:
             - containerPort: 80
           envFrom:
             - configMapRef:
                 name: abandonauth-config
+            - configMapRef:
+                name: database-config
       restartPolicy: Always
   selector:
     matchLabels:
