update to auth.abandontech.cloud for prod

--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -39,7 +39,7 @@ jobs:
     needs: [ build-production ]
     environment:
       name: Production
-      url: https://api.abandontech.cloud/auth
+      url: https://auth.abandontech.cloud
 
     steps:
       - name: Checkout repository
