--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,8 +13,8 @@ python-jose = "^3.3.0"
 passlib = { extras = ["bcrypt"], version = "^1.7.4" }
 python-dotenv = "^0.20.0"
 classy-config = "^0.3.2"
-requests = "^2.28.1"
 prisma = "^0.6.6"
+httpx = "^0.23.3"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^4.0.1"
