--- a/.github/workflows/lint-and-build.yml
+++ b/.github/workflows/lint-and-build.yml
@@ -3,8 +3,10 @@ name: Lint & Build Image
 on:
   push:
     branches:
-      - '!main' # Exclude main
+      - 'main'
   pull_request:
+    branches:
+      - 'main'
 
 jobs:
   lint:
@@ -40,17 +42,13 @@ jobs:
         id: vars
         run: echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
 
-      - name: Build and push image
-        id: build_and_push_docker_image
-        uses: docker/build-push-action@v2
-        with:
-          context: ./
-          file: ./Dockerfile
-          build-args: BUILD_VERSION=${{ steps.vars.outputs.sha_short }}-dev
-          push: true
-          tags: |
-            registry.abandontech.cloud/abandontech/abandonauth:${{ github.sha }}
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
-      - name: Image digest
-        run: |
-          echo ${{ steps.build_and_push_docker_image.outputs.digest }}
+      - name: Build and push image
+        uses: docker/build-push-action@v4
+        with:
+          push: true
+          build-args: BUILD_VERSION=${{ steps.vars.outputs.sha_short }}
+          tags: |
+            ghcr.io/abandontech/abandonauth:${{ steps.vars.outputs.sha_short }}
