--- a/.env.sample
+++ b/.env.sample
@@ -1,13 +1,16 @@
-POSTGRES_DB=abandonauth
+POSTGRES_VERSION=14
+POSTGRES_DB=postgres
 POSTGRES_HOST=database
 POSTGRES_PASSWORD=postgres
 POSTGRES_USER=postgres
+POSTGRES_PORT=5432
 
 DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}/${POSTGRES_DB}"
 
 JWT_SECRET=NotASecretDoNotUseInProd
 JWT_HASHING_ALGO=HS512
 JWT_EXPIRES_IN=2592000
+
 
 BASE_URL=http://localhost:8000
 
