--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,18 +3,22 @@ version: "3"
 services:
 
   abandonauth:
-    build: .
-    profiles:
-      - test
+    build:
+      context: .
+      dockerfile: Dockerfile
+      args:
+        - uvicorn_extras=--reload
     depends_on:
       - database
     env_file:
       - .env
     ports:
-      - "8000:80"
+      - "8000:8000"
+    volumes:
+      - "./app:/app:ro"
 
   database:
-    image: "postgres:14"
+    image: "postgres:${POSTGRES_VERSION}"
     volumes:
       - postgres_data:/var/lib/postgresql/data/
     healthcheck:
@@ -23,9 +27,11 @@ services:
       timeout: 1s
       retries: 5
     ports:
-      - "5432:5432"
+      - "127.0.0.1:5432:5432"
     environment:
-      - "POSTGRES_HOST_AUTH_METHOD=trust"
+      - "POSTGRES_HOST=${POSTGRES_HOST}"
+      - "POSTGRES_PASSWORD=${POSTGRES_PASSWORD}"
+      - "POSTGRES_USER=${POSTGRES_USER}"
 
 volumes:
   postgres_data:
