--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -17,3 +17,30 @@ repos:
         language: system
         types: [python]
         require_serial: true
+-   repo: local
+    hooks:
+    -   id: prisma-format
+        name: Prisma Format
+        description: Run prisma formatter on schema
+        entry: poetry run prisma format
+        language: system
+        types: [python]
+        require_serial: true
+-   repo: local
+    hooks:
+    -   id: prisma-generate
+        name: Prisma Generate
+        description: Generate Prisma client before static analysis (pyright)
+        entry: poetry run prisma generate --schema prisma/schema.prisma
+        language: system
+        types: [python]
+        require_serial: true
+-   repo: local
+    hooks:
+    -   id: pyright
+        name: Pyright
+        description: Run pyright static analysis
+        entry: poetry run pyright
+        language: system
+        types: [python]
+        require_serial: true
