--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,16 +6,18 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-      args:
+      args: # Enables hot reloading
         - uvicorn_extras=--reload
+    env_file:
+      - ".env"
     depends_on:
       - database
-    env_file:
-      - .env
     ports:
-      - "8000:8000"
-    volumes:
-      - "./app:/app:ro"
+      - "8000:80"
+    volumes:  # mount the source code as a volume, so we can use hot reloading
+      - "./abandonauth:/app/abandonauth:ro"
+      - "./prisma:/app/prisma:ro"
+
 
   database:
     image: "postgres:${POSTGRES_VERSION}"
