--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,30 +2,24 @@
 name = "abandonauth"
 version = "0.0.1"
 description = ""
-authors = ["GDWR <gdwr@abandontech.cloud>"]
+authors = [
+    "GDWR <gdwr@abandontech.cloud>",
+    "Fisher60 <kyler@abandontech.cloud>",
+]
 
 [tool.poetry.dependencies]
 python = "^3.10"
-fastapi = "^0.79.0"
-uvicorn = "^0.18.2"
-toml = "^0.10.2"
-python-jose = "^3.3.0"
-passlib = { extras = ["bcrypt"], version = "^1.7.4" }
-python-dotenv = "^0.20.0"
-classy-config = "^0.3.2"
-prisma = "^0.6.6"
+fastapi = "^0.92.0"
 httpx = "^0.23.3"
+uvicorn = "^0.20.0"
+prisma = "^0.8.1"
+pydantic = {extras = ["dotenv"], version = "^1.10.5"}
+python-jose = "^3.3.0"
 
-[tool.poetry.dev-dependencies]
-flake8 = "^4.0.1"
-flake8-annotations = "^2.9.0"
-flake8-bandit = "^3.0.0"
-flake8-bugbear = "^22.7.1"
-flake8-docstrings = "^1.6.0"
-flake8-import-order = "^0.18.1"
-flake8-string-format = "^0.3.0"
-pep8-naming = "^0.13.1"
-pre-commit = "^2.20.0"
+[tool.poetry.group.dev.dependencies]
+flake8 = "^6.0.0"
+pre-commit = "^3.0.4"
+pyright = "^1.1.294"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
