--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
 
 
   database:
-    image: "postgres:${POSTGRES_VERSION}"
+    image: "postgres:${POSTGRES_VERSION:-15-alpine}"
     volumes:
       - postgres_data:/var/lib/postgresql/data/
     healthcheck:
