--- a/.env.sample
+++ b/.env.sample
@@ -8,8 +8,7 @@ JWT_SECRET=NotASecretDoNotUseInProd
 JWT_HASHING_ALGO=HS512
 JWT_EXPIRES_IN_SECONDS=2592000
 
-BASE_URL=http://localhost:8000
 
 DISCORD_CLIENT_ID=
 DISCORD_CLIENT_SECRET=
-DISCORD_CALLBACK_BASE="${BASE_URL}/discord"
+DISCORD_CALLBACK=http://auth.localhost/discord
