--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,6 +8,11 @@ on:
         type: boolean
         required: false
         default: false
+      push:
+        description: "If the built container should be pushed."
+        type: boolean
+        required: false
+        default: false
 
 jobs:
   lint:
@@ -32,7 +37,9 @@ jobs:
         run: |
           tag=$(cut -c 1-7 <<< $GITHUB_SHA)
           echo "::set-output name=tag::$tag"
+
       - name: Build and push
+        if: ${{ inputs.push }}
         uses: docker/build-push-action@v3
         with:
           context: .
