--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,11 +26,12 @@ jobs:
         uses: docker/setup-buildx-action@v2
 
       - name: Login to Github Container Registry
+        if: ${{ inputs.push }}
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
-          password: ${{ secrets.GITHUB_TOKEN  }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Create SHA Container Tag
         id: sha_tag
