Add GitHub login

--- a/.env.sample
+++ b/.env.sample
@@ -11,4 +11,9 @@ JWT_EXPIRES_IN_SECONDS=2592000
 
 DISCORD_CLIENT_ID=
 DISCORD_CLIENT_SECRET=
-DISCORD_CALLBACK=http://auth.localhost/discord
+DISCORD_CALLBACK=http://localhost:8000/discord
+
+
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
+GITHUB_CALLBACK=http://localhost:8000/github
