Add google auth

--- a/.env.sample
+++ b/.env.sample
@@ -17,3 +17,7 @@ DISCORD_CALLBACK=http://localhost:8000/discord
 GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
 GITHUB_CALLBACK=http://localhost:8000/github
+
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_CALLBACK=http://localhost:8000/google
