--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ uvicorn = "^0.20.0"
 prisma = "^0.8.2"
 pydantic = {extras = ["dotenv"], version = "^1.10.5"}
 python-jose = "^3.3.0"
+passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^6.0.0"
