--- a/.env.sample
+++ b/.env.sample
@@ -9,7 +9,7 @@ JWT_HASHING_ALGO=HS512
 JWT_EXPIRES_IN_SECONDS_LONG_LIVED=2592000
 JWT_EXPIRES_IN_SECONDS_SHORT_LIVED=120
 
-ABANDON_AUTH_DISCORD_REDIRECT='https://discord.com/api/oauth2/authorize?client_id=<your_discord_client_id>&redirect_uri=http%3A%2F%2Flocalhost%3A8001/ui/discord-callback&response_type=code&scope=identify'
+ABANDON_AUTH_DISCORD_REDIRECT=
 ABANDON_AUTH_DISCORD_CALLBACK='http://localhost:8000/ui/discord-callback'
 ABANDON_AUTH_DEVELOPER_APP_ID=
 DISCORD_CLIENT_SECRET=
