--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,8 @@ fastapi = "^0.110.1"
 httpx = "^0.27.0"
 uvicorn = "^0.29.0"
 prisma = "^0.13.1"
-pydantic = {extras = ["dotenv"], version = "^1.10.5"}
+pydantic = {extras = ["dotenv"], version = "^2.7.0"}
+pydantic-settings = "^2.2.1"
 python-jose = "^3.3.0"
 python-multipart = "^0.0.9"
 passlib = {extras = ["bcrypt"], version = "^1.7.4"}
@@ -30,6 +31,10 @@ pyright = "^1.1.358"
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+
+
+
 
 [tool.poetry.scripts]
 dev = "abandonauth.__main__:main"
