add debug env variable

--- a/.env.sample
+++ b/.env.sample
@@ -21,3 +21,5 @@ GITHUB_CALLBACK=http://localhost:8000/github
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 GOOGLE_CALLBACK=http://localhost:8000/google
+
+DEBUG=False
