--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,14 +8,15 @@ repos:
     -   id: check-yaml
         exclude: deployment/
     -   id: check-added-large-files
+
 -   repo: local
     hooks:
-    -   id: flake8
-        name: Flake8
-        description: This hook runs flake8 within our project's environment.
-        entry: poetry run flake8
+    - id: ruff-lint
+        name: ruff linting
+        description: Run ruff linting
+        entry: poetry run ruff check --force-exclude
         language: system
-        types: [python]
+        'types_or': [python, pyi]
         require_serial: true
 -   repo: local
     hooks:
