--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,13 +28,36 @@ ruff = "^0.4.3"
 pre-commit = "^3.7.0"
 pyright = "^1.1.361"
 
+[tool.ruff]
+target-version = "py310"
+extend-exclude = ["constants.py", ".cache", "tests"]
+line-length = 120
+unsafe-fixes = true
+preview = true
+output-format = "concise"
+
+[tool.ruff.lint]
+select = ["ALL"]
+ignore = [
+    "ANN002", "ANN003", "ANN101", "ANN102", "ANN401",
+    "B008",
+    "C901",
+    "CPY001",
+    "D100", "D104", "D105", "D107", "D203", "D212", "D214", "D215", "D416",
+]
+
+[tool.ruff.lint.isort]
+order-by-type = false
+case-sensitive = true
+combine-as-imports = true
+
+[tool.ruff.lint.per-file-ignores]
+"abandonauth/models/__init__.py" = ["F401"]
+"abandonauth/routers/__init__.p" = ["F401"]
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
-
-
-
-
 
 [tool.poetry.scripts]
 dev = "abandonauth.__main__:main"
