Update lint CI to use ruff

--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -18,4 +18,8 @@ jobs:
           install_args: "--with=dev"
 
       - name: Run pre-commit hooks
-        run: pre-commit run --all-files
+        run: SKIP=ruff-lint pre-commit run --all-files
+
+      # Run `ruff` using github formatting to enable automatic inline annotations.
+      - name: Run ruff
+        run: "ruff check --output-format=github ."
