--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,7 @@ python-multipart = "^0.0.9"
 passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 
 [tool.poetry.group.dev.dependencies]
-flake8 = "^7.0.0"
+ruff = "^0.4.3"
 pre-commit = "^3.7.0"
 pyright = "^1.1.361"
 
