--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,8 +53,7 @@ case-sensitive = true
 combine-as-imports = true
 
 [tool.ruff.lint.per-file-ignores]
-"abandonauth/models/__init__.py" = ["F401"]
-"abandonauth/routers/__init__.p" = ["F401"]
+"**/__init__.py" = ["F401"]
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
