Mark prisma as an explicit 3rd party module
Due to there being a folder with the name prisma in the repository, ruff was detecting this as a 3rd party for isort rules

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,6 +54,7 @@ ban-relative-imports = "all"
 order-by-type = false
 case-sensitive = true
 combine-as-imports = true
+known-third-party = ["prisma"]
 
 [tool.ruff.lint.per-file-ignores]
 "**/__init__.py" = ["F401"]
