Add github environment variables and update settings.py to match

--- a/.env.sample
+++ b/.env.sample
@@ -14,9 +14,10 @@ ABANDON_AUTH_DISCORD_CALLBACK='http://localhost:8000/ui/discord-callback'
 ABANDON_AUTH_DEVELOPER_APP_ID=
 DISCORD_CLIENT_SECRET=
 
+ABANDON_AUTH_GITHUB_REDIRECT=
+ABANDON_AUTH_GITHUB_CALLBACK='http://localhost:8000/ui/github-callback'
 GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
-GITHUB_CALLBACK=http://localhost:8000/github
 
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
