--- a/.env.sample
+++ b/.env.sample
@@ -14,10 +14,10 @@ ABANDON_AUTH_DISCORD_CALLBACK='http://localhost:8000/ui/discord-callback'
 ABANDON_AUTH_DEVELOPER_APP_ID=
 DISCORD_CLIENT_SECRET=
 
-ABANDON_AUTH_GITHUB_REDIRECT=
-ABANDON_AUTH_GITHUB_CALLBACK='http://localhost:8000/ui/github-callback'
 GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
+ABANDON_AUTH_GITHUB_CALLBACK='http://localhost:8000/ui/github-callback'
+ABANDON_AUTH_GITHUB_REDIRECT="https://github.com/login/oauth/authorize?client_id=$GITHUB_CLIENT_ID&redirect_uri=$ABANDON_AUTH_GITHUB_CALLBACK&scope=user:email"
 
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
