--- a/.env.sample
+++ b/.env.sample
@@ -16,7 +16,8 @@ DISCORD_CLIENT_SECRET=
 
 GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
-GITHUB_CALLBACK=http://localhost:8000/github
+ABANDON_AUTH_GITHUB_CALLBACK='http://localhost:8000/ui/github-callback'
+ABANDON_AUTH_GITHUB_REDIRECT="https://github.com/login/oauth/authorize?client_id=$GITHUB_CLIENT_ID&redirect_uri=$ABANDON_AUTH_GITHUB_CALLBACK&scope=user:email"
 
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
