--- a/.env.sample
+++ b/.env.sample
@@ -9,6 +9,8 @@ JWT_HASHING_ALGO=HS512
 JWT_EXPIRES_IN_SECONDS_LONG_LIVED=2592000
 JWT_EXPIRES_IN_SECONDS_SHORT_LIVED=120
 
+ABANDON_AUTH_SITE_URL=http://localhost:3000
+
 ABANDON_AUTH_DISCORD_REDIRECT=
 ABANDON_AUTH_DISCORD_CALLBACK='http://localhost:8000/ui/discord-callback'
 ABANDON_AUTH_DEVELOPER_APP_ID=
