--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ services:
 
   abandonauth:
     build:
-      context: .
+      context: src/api
       dockerfile: Dockerfile
       args: # Enables hot reloading
         - uvicorn_extras=--reload
@@ -13,9 +13,25 @@ services:
     ports:
       - "8000:80"
     volumes:  # mount the source code as a volume, so we can use hot reloading
-      - "./abandonauth:/app/abandonauth:ro"
+      - "./src/api/abandonauth:/app/abandonauth:ro"
       - "./prisma:/app/prisma:ro"
-
+  
+  website:
+    build:
+      context: ./src/website
+      dockerfile: Dockerfile
+      args:
+        - ABANDON_AUTH_URL=${ABANDON_AUTH_URL}
+        - ABANDON_AUTH_DEVELOPER_APP_ID=${ABANDON_AUTH_DEVELOPER_APP_ID}
+        - GITHUB_REDIRECT=${GITHUB_REDIRECT}
+        - DISCORD_REDIRECT${DISCORD_REDIRECT}
+    environment:
+      - ABANDON_AUTH_URL=${ABANDON_AUTH_URL}
+      - ABANDON_AUTH_DEVELOPER_APP_ID=${ABANDON_AUTH_DEVELOPER_APP_ID}
+      - GITHUB_REDIRECT=${GITHUB_REDIRECT}
+      - DISCORD_REDIRECT${DISCORD_REDIRECT}
+    ports:
+        - "3000:3000"
 
   database:
     image: "postgres:${POSTGRES_VERSION:-15-alpine}"
