--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -12,7 +12,12 @@ jobs:
   linting:
     uses: ./.github/workflows/linting.yml
 
-  build-deploy:
-    uses: ./.github/workflows/build.yml
+  build_api:
+    uses: ./.github/workflows/build_api.yml
     needs:
       - linting
+
+  build_frontend:
+    uses: ./.github/workflows/build_frontend.yml
+      needs:
+        - linting
