ignore trailing comma rule in ruff

--- a/src/api/pyproject.toml
+++ b/src/api/pyproject.toml
@@ -43,6 +43,7 @@ ignore = [
     "ANN002", "ANN003", "ANN101", "ANN102", "ANN401",
     "B008",
     "C901",
+    "COM812",
     "CPY001",
     "D100", "D104", "D105", "D107", "D203", "D212", "D214", "D215", "D416",
 ]
