Run pre-commit on all files

--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -20,7 +20,7 @@ jobs:
 
       - name: Run pre-commit hooks
         working-directory: src/api
-        run: SKIP=ruff pre-commit run --files src/api
+        run: SKIP=ruff pre-commit run --all-files
 
       # Run `ruff` using github formatting to enable automatic inline annotations.
       - name: Run ruff
