--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,5 @@
 POSTGRES_DB=postgres
-POSTGRES_HOST=database
+POSTGRES_HOST=localhost
 POSTGRES_PASSWORD=postgres
 POSTGRES_USER=postgres
 DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}/${POSTGRES_DB}"
