Path based routing and docker compose config update for local dev
These changes do not work well on windows and the compose.yml file as well as env vars will need to be tweaked for local dev when deploying the website in docker versus using yarn dev

--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,5 @@
 POSTGRES_DB=postgres
-POSTGRES_HOST=database
+POSTGRES_HOST=localhost
 POSTGRES_PASSWORD=postgres
 POSTGRES_USER=postgres
 DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}/${POSTGRES_DB}"
@@ -9,6 +9,7 @@ JWT_HASHING_ALGO=HS512
 JWT_EXPIRES_IN_SECONDS_LONG_LIVED=2592000
 JWT_EXPIRES_IN_SECONDS_SHORT_LIVED=120
 
+ABANDON_AUTH_URL=http://localhost:8000
 ABANDON_AUTH_SITE_URL=http://localhost:3000
 
 ABANDON_AUTH_DISCORD_REDIRECT=
